end of index page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div id="wrapper">
+            <h2 class="name">John Doe</h2>
+            <button class="logout__btn">Logout</button>
+        </div>
+        <div class="wrapper-container">
+            <div class="posts__wrappper">
+                <h3 class="posts__heading">Posts</h3>
+                <ul class="posts__list">
+                    <li class="post__item">
+                        <div class="post__item-left">
+                            <h3 class="post__item-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit</h3>
+                            <p class="post__item-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur quod nulla ducimus nihil vero dolore suscipit odio fuga corrupti doloremque, eveniet necessitatibus possimus dolorum laboriosam eos, eum tempora minima quasi! </p>
+                        </div>
+                        <div class="post__item-right">
+                            <button class="post__item-delete">DELETE</button>
+                            <button class="post__item-edit">EDIT</button>
+                        </div>
+                        
+                        <button class="post__item-save">SAVE</button>
+                    </li>
+                </ul>
+            </div>
+            <div class="posts__wrappper">
+                <h3 class="posts__heading">Posts</h3>
+                <ul class="posts__list">
+                    <li class="post__item">
+                        <div class="post__item-left">
+                            <h3 class="post__item-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit</h3>
+                            <p class="post__item-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur quod nulla ducimus nihil vero dolore suscipit odio fuga corrupti doloremque, eveniet necessitatibus possimus dolorum laboriosam eos, eum tempora minima quasi! </p>
+                        </div>
+                        <div class="post__item-right">
+                            <button class="post__item-delete btn-margin">DELETE</button>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
