--- a/index.html
+++ b/index.html
@@ -25,17 +25,9 @@
                 </ul>
             </div>
             <div class="posts__wrappper">
-                <h3 class="posts__heading">Posts</h3>
+                <h3 class="posts__heading">Saved posts</h3>
                 <ul class="save__list">
-                    <li class="post__item">
-                        <div class="post__item-left">
-                            <h3 class="post__item-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit</h3>
-                            <p class="post__item-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur quod nulla ducimus nihil vero dolore suscipit odio fuga corrupti doloremque, eveniet necessitatibus possimus dolorum laboriosam eos, eum tempora minima quasi! </p>
-                        </div>
-                        <div class="post__item-right">
-                            <button class="post__item-delete btn-margin">DELETE</button>
-                        </div>
-                    </li>
+                    
                 </ul>
             </div>
         </div>
